--- a/CameraSample/app/build.gradle
+++ b/CameraSample/app/build.gradle
@@ -10,6 +10,12 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,9 +26,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    def camerax_view_version = "1.0.0-alpha01"
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    def camerax_version = "1.0.0-alpha06"
+    def camerax_view_version = "1.0.0-alpha03"
+
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-view:$camerax_view_version"
+
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     testImplementation 'junit:junit:4.12'
